...
  "@@locale": "tr",
  "appTitle": "FamilyHub",
  "family": "Ailem",
  "settings": "Ayarlar",
  "profile": "Profil",
  "logout": "Çıkış Yap",
  "login": "Giriş Yap",
  "register": "Kaydol",
  "email": "E-posta",
  "password": "Şifre",
  "confirmPassword": "Şifre (Tekrar)",
  "name": "Ad",
  "phone": "Telefon",
...
  "yeniSifreBelirle": "Yeni Şifre Belirle",
  "guvenlikDogrulamanizBasariliLutfenYeniSifreniziBelirleyin": "Güvenlik doğrulamanız başarılı. Lütfen yeni şifrenizi belirleyin.",
  "sifremiDegistir": "Şifremi Değiştir",
  "sifrenizGuncellendi": "Şifreniz Güncellendi!",
  "biyometrikKimlikDogrulamaDesteklenmiyor": "Biyometrik kimlik doğrulama desteklenmiyor",
  "onceEpostaVeSifreIleGirisYapmalisiniz": "Önce e-posta ve şifre ile giriş yapmalısınız",
  "sifremiunuttum1": "Şifremi unuttum",
  "googleSigninSuAnKullanilamiyor": "Google Sign-In şu an kullanılamıyor. ",
  "lutfenEpostaVeSifreIleGirisYapin": "Lütfen e-posta ve şifre ile giriş yapın.",
  "googleIleGirisYap": "Google ile Giriş Yap",
  "parmakIziIleGiris": "Parmak İzi ile Giriş",
  "hesabinYokMu": "Hesabın yok mu? ",
  "kayitOl": "Kayıt Ol",
  "guvendeKalin": "Güvende Kalın",
  "canliKonumPaylasimiVeAcilDurumButonuIleAileniziKoruyun": "Canlı konum paylaşımı ve acil durum butonu ile ailenizi koruyun.",
  "tumAileUyeleriniziTekBirYerdenYonetinOrganizeOlun": "Tüm aile üyelerinizi tek bir yerden yönetin, organize olun.",
  "gorevlerTakvimEtkinlikleriVeAlisverisListeleriIleHayatiKolaylastirin": "Görevler, takvim etkinlikleri ve alışveriş listeleri ile hayatı kolaylaştırın.",
  "basla": "Başla",
  "simdiGec": "Şimdi Geç",
  "ailenizinKalbiBuradaAtiyor": "Ailenizin kalbi burada atıyor",
  "aileButcesi": "Aile Bütçesi",
  "islemler": "İşlemler",
  "dahaFazlaVeriToplandikcaKisisellestirilmisOnerilerSunacagiz": "💡 Daha fazla veri toplandıkça kişiselleştirilmiş öneriler sunacağız.",
  "aiButceAnalizi": "AI Bütçe Analizi",
...
